--- a/model/code.ipynb
+++ b/model/code.ipynb
@@ -62,6 +62,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# === MRI DETECTION STAGE ==="
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -92,8 +99,6 @@
     }
    ],
    "source": [
-    "# === DETECTION STAGE ===\n",
-    "\n",
     "# Load detection model\n",
     "detect_model = load_model(\"detect.weights.keras\")\n",
     "\n",
