--- a/model/code.ipynb
+++ b/model/code.ipynb
@@ -142,6 +142,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# === CLASSIFICATION/PREDICTION STAGE ==="
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -171,7 +178,6 @@
     }
    ],
    "source": [
-    "# === CLASSIFICATION STAGE ===\n",
     "if proceed_to_classification:\n",
     "    from tensorflow.keras.preprocessing import image\n",
     "    import matplotlib.pyplot as plt\n",
