--- a/model/code.ipynb
+++ b/model/code.ipynb
@@ -223,6 +223,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# === SEGMENTATION STAGE ==="
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -252,7 +259,6 @@
     }
    ],
    "source": [
-    "# === SEGMENTATION STAGE ===\n",
     "if proceed_to_segmentation:\n",
     "    import torch\n",
     "    from PIL import Image\n",
